# hvmodule

./: CMakeLists.txt  LICENSE  conanfile.py  settings.yml
scripts/: ci-before.py
src/: CMakeLists.txt  HVModule  base_module.cpp  base_module.h  module.cpp  module.h  module_name.h
src/base-module/: base-module.cpp  base-module.h
src/module/: module.h  name.h
tests/: CMakeLists.txt  base_module_test.cpp  gtestrunner.cpp  module_name_test.cpp  module_test.cpp
tests/conan/: CMakeLists.txt  conanfile.py  example.cpp
